  CR: Template API: Omission of final for the methods scan and render
      Enables the preparation/customization of the meta object before rendering.
      The rendering is done in three steps (content, header, footer) and so this can be done once for all steps.
  CR: Template API: Added of public for Multiplex and Template.merge(Collection documents)
  CR: Template Generate: Unified behavior of data placeholders and static placeholders
      - Placeholders are case insensitive
      - Placeholders are limited to the following characters: a-z A-Z 0-9 _-
      - Placeholders must begin with a letter
      - Placeholders cannot be inserted subsequently
      - Placeholders without value are removed at the end
  CR: Template Preview Properties: Omission of the prefix 'static'
      Data and static use the same data/properties.
      Data uses all data as a structured map.
      Statics used only non-structured keys, without dot and list index as a flat map.
  CR: Template Statics: Added of the exists pendants
  CR: Maven: Update of dependencies
  CR: Maven: Update to use Java 11

3.7.3 20200530
  BF: Template: Correction of case insensitive statics
  CR: Test: Added a pixel based comparison of the PDFs

3.7.2 20200530
  BF: Template: Optimization of the statics for case insensitivity
  BF: Template: Correction/optimization for markup detection and escape
  BF: Test: Correction of JUnit5
  CR: Maven: Update of dependencies
  CR: Generator: Optimization of the code

3.7.1.1 20200510
  BF: Service: Correction of deprecated code
  BF: Service: Correction of unclosed documents
  BF: Template: Correction/optimization for markup detection and escape
  BF: UsageTemplate: Correction
  CR: Maven: Minimization of dependencies

3.7.0 20200420
  CR: Service: Added support of data type Markup for values
      Service.Meta.data + Service.Meta.data.statics have been changed to the use of CharSequence.